// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapBuilder createCodeMapFromHashMap should create a valid delta map 1`] = `
Object {
  "attributes": Object {},
  "children": Array [
    Object {
      "attributes": Object {
        "functions": 10,
        "mcc": 1,
        "rloc": 100,
      },
      "children": Array [],
      "isExcluded": false,
      "isFlattened": false,
      "link": "http://www.google.de",
      "name": "big leaf",
      "path": "/root/big leaf",
      "type": "File",
    },
    Object {
      "attributes": Object {},
      "children": Array [
        Object {
          "attributes": Object {
            "functions": 100,
            "mcc": 100,
            "rloc": 30,
          },
          "children": Array [],
          "isExcluded": false,
          "isFlattened": false,
          "name": "small leaf",
          "path": "/root/Parent Leaf/small leaf",
          "type": "File",
        },
        Object {
          "attributes": Object {},
          "children": Array [],
          "isExcluded": false,
          "isFlattened": false,
          "name": "empty folder",
          "path": "/root/Parent Leaf/empty folder",
          "type": "Folder",
        },
        Object {
          "attributes": Object {
            "functions": 1000,
            "mcc": 10,
            "rloc": 70,
          },
          "children": Array [],
          "isExcluded": false,
          "isFlattened": false,
          "name": "other small leaf",
          "path": "/root/Parent Leaf/other small leaf",
          "type": "File",
        },
      ],
      "isExcluded": false,
      "isFlattened": false,
      "name": "Parent Leaf",
      "path": "/root/Parent Leaf",
      "type": "Folder",
    },
  ],
  "isExcluded": false,
  "isFlattened": false,
  "name": "root",
  "path": "/root",
  "type": "Folder",
}
`;

exports[`mapBuilder createCodeMapFromHashMap should create a valid delta map with empty folders in between 1`] = `
Object {
  "attributes": Object {},
  "children": Array [
    Object {
      "attributes": Object {
        "functions": 10,
        "mcc": 1,
        "rloc": 100,
      },
      "children": Array [],
      "isExcluded": false,
      "isFlattened": false,
      "link": "http://www.google.de",
      "name": "big leaf",
      "path": "/root/in/between/big leaf",
      "type": "File",
    },
    Object {
      "attributes": Object {},
      "children": Array [
        Object {
          "attributes": Object {
            "functions": 100,
            "mcc": 100,
            "rloc": 30,
          },
          "children": Array [],
          "isExcluded": false,
          "isFlattened": false,
          "name": "small leaf",
          "path": "/root/in/between/Parent Leaf/small leaf",
          "type": "File",
        },
        Object {
          "attributes": Object {},
          "children": Array [],
          "isExcluded": false,
          "isFlattened": false,
          "name": "empty folder",
          "path": "/root/in/between/Parent Leaf/empty folder",
          "type": "Folder",
        },
        Object {
          "attributes": Object {
            "functions": 1000,
            "mcc": 10,
            "rloc": 70,
          },
          "children": Array [],
          "isExcluded": false,
          "isFlattened": false,
          "name": "other small leaf",
          "path": "/root/in/between/Parent Leaf/other small leaf",
          "type": "File",
        },
      ],
      "isExcluded": false,
      "isFlattened": false,
      "name": "Parent Leaf",
      "path": "/root/in/between/Parent Leaf",
      "type": "Folder",
    },
  ],
  "isExcluded": false,
  "isFlattened": false,
  "name": "root",
  "path": "/root",
  "type": "Folder",
}
`;
